More content, React Router

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Log In | Art Supply Tracker</title>
+    <title>Art Supply Tracker</title>
     <!--CSS-->
     <link rel="stylesheet" href="%PUBLIC_URL%/main.css" type="text/css"/>
     <!--Favicon-->
