authentication done, working on context

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Art Supply Tracker</title>
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
     <!--CSS-->
     <link rel="stylesheet" href="%PUBLIC_URL%/main.css" type="text/css"/>
     <!--Favicon-->
